# gpufetch

./: Cargo.toml  INSTALLATION.md  README.md  build.sh
src/: args.rs  display.rs  main.rs  utils.rs
src/gpu/: amd.rs  common.rs  intel.rs  mod.rs  nvidia.rs  pci.rs
