[package]
name = "gpufetch"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern GPU information displaying tool"
license = "GPL-3.0"
repository = "https://github.com/yourusername/gpufetch"
readme = "README.md"
keywords = ["gpu", "hardware", "system", "fetch"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pci-ids = "0.2"
sysfs-class = "0.1"
procfs = "0.15"
colored = "2.0"
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
regex = "1.10"
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
